--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,7 +14,7 @@
 <div id="balance"></div>
 <div id="totalbet"></div>
 <button id="reset">Reset Bets</button>
-<div><img src="Craps_table_layout.svg" id="crapstable" class="map" usemap="#map" />
+<div id="tablediv"><img src="Craps_table_layout.svg" id="crapstable" class="map" usemap="#map" />
 <div id="point"></div>
 <div id="dice">
 <div id="die1"></div>
